@@ -42,36 +42,6 @@ int32_t SPVM__Net__SSLeay__X509_NAME__oneline(SPVM_ENV* env, SPVM_VALUE* stack) 
   return 0;
 }
 
-int32_t SPVM__Net__SSLeay__X509_NAME__get_text_by_NID(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  int32_t nid = stack[1].ival;
-  
-  void* obj_buf = stack[2].oval;
-  
-  char* buf = NULL;
-  if (!obj_buf) {
-    buf = (char*)env->get_chars(env, stack, obj_buf);
-  }
-  
-  int32_t len = stack[3].ival;
-  
-  if (obj_buf && len < 0) {
-    len = env->length(env, stack, obj_buf);
-  }
-  
-  X509_NAME* self = env->get_pointer(env, stack, obj_self);
-  
-  int32_t length = X509_NAME_get_text_by_NID(self, nid, buf, len);
-  
-  stack[0].ival = length;
-  
-  return 0;
-}
-
 int32_t SPVM__Net__SSLeay__X509_NAME__get_entry(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
