@@ -4,7 +4,6 @@
 class Net::SSLeay::X509_NAME : pointer {
   
   use Net::SSLeay::X509_NAME_ENTRY;
-  use Net::SSLeay::ASN1_OBJECT;
   use Fn;
   
   # Class Methods
@@ -19,8 +18,6 @@ class Net::SSLeay::X509_NAME : pointer {
   
   # Instance Methods
   native method oneline : string ();
-  
-  native method get_text_by_NID : int ($nid : int, $buf : mutable string, $len : int = -1);
   
   native method get_entry : Net::SSLeay::X509_NAME_ENTRY ($loc : int);
   
